src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>BMXB__Product_Specific_Discount_Threshold__c</fullName>
        <description>Discount Threshold above which approval is required on this specific product</description>
        <inlineHelpText>Discount Threshold above which approval is required on this specific product</inlineHelpText>
        <label>Product Specific Discount Threshold</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BMXB__Recurrence__c</fullName>
        <label>Recurrence</label>
        <picklist>
            <picklistValues>
                <fullName>One-time</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMXQ__Product_Terms__c</fullName>
        <label>Product Terms</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Co_Term__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Co-Term</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_New__c</fullName>
        <label>Core/New</label>
        <picklist>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deployment_Type__c</fullName>
        <label>Deployment Type</label>
        <picklist>
            <picklistValues>
                <fullName>SAAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount_SKU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discount SKU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <picklist>
            <picklistValues>
                <fullName>Java APM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>.NET APM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP APM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Node.js APM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Python</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netapp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Database Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Server Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Server Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Browser RUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile RUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Log Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transaction Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-License</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monthly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monthly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Needs_VSOE_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs VSOE Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NetSuite_Id__c</fullName>
        <externalId>true</externalId>
        <label>NetSuite Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetSuite_Item__c</fullName>
        <formula>IF(NetSuite_Id__c == null, &quot;&quot;, HYPERLINK(&quot;https://system.netsuite.com/app/common/item/item.nl?id=&quot; + NetSuite_Id__c , &quot;View&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NetSuite Item</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_VSOE_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No VSOE Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>One_Time_Discount_Applied__c</fullName>
        <label>One Time Discount Applied</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Margin_Applied__c</fullName>
        <description>Determines whether the partner margin is applied to the quote line item</description>
        <label>Partner Margin Applied</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Perpetual_Support_Discount_Percentage__c</fullName>
        <label>Perpetual Support Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Perpetual_Support_Type__c</fullName>
        <inlineHelpText>This field is for Products from the Perpetual Support Product Family.</inlineHelpText>
        <label>Perpetual Support Type</label>
        <picklist>
            <controllingField>Family</controllingField>
            <picklistValues>
                <fullName>New Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prod_PreProd__c</fullName>
        <label>Prod/PreProd</label>
        <picklist>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-License</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Specific_Discount_Threshold_2__c</fullName>
        <label>Product Specific Discount Threshold 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Specific_Discount_Threshold_3__c</fullName>
        <label>Product Specific Discount Threshold 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Specific_Discount_Threshold_4__c</fullName>
        <label>Product Specific Discount Threshold 4</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Standard_Price_List_Product_Checkbox__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Standard Price List Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_Duration__c</fullName>
        <label>Subscription Duration</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1 Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-11 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13+ Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Support_Pecent_per_Year__c</fullName>
        <label>Support Pecent per Year</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Term_In_Months__c</fullName>
        <label>Term In Months</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volume_Discount_Applied__c</fullName>
        <label>Volume Discount Applied</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>of_Training_Units__c</fullName>
        <label># of Training Units</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>66</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>of_cards__c</fullName>
        <label># of cards</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>All_Active_Products</fullName>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>Standard_Price_List_Product_Checkbox__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>One_Time_Discount_Applied__c</columns>
        <columns>License_Type__c</columns>
        <columns>Subscription_Duration__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Monthly__c</columns>
        <columns>Perpetual_Support_Type__c</columns>
        <columns>Support_Pecent_per_Year__c</columns>
        <columns>Volume_Discount_Applied__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Active_Products_Missing_Partner_Marg</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>One_Time_Discount_Applied__c</columns>
        <columns>License_Type__c</columns>
        <columns>Subscription_Duration__c</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Monthly__c</columns>
        <columns>Partner_Margin_Applied__c</columns>
        <columns>Perpetual_Support_Type__c</columns>
        <columns>Support_Pecent_per_Year__c</columns>
        <columns>Volume_Discount_Applied__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Partner_Margin_Applied__c</field>
            <operation>equals</operation>
        </filters>
        <label>Active Products Blank Partner Margin</label>
    </listViews>
    <listViews>
        <fullName>All_Hosting_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>One_Time_Discount_Applied__c</columns>
        <columns>License_Type__c</columns>
        <columns>Subscription_Duration__c</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Monthly__c</columns>
        <columns>Perpetual_Support_Type__c</columns>
        <columns>Support_Pecent_per_Year__c</columns>
        <columns>Volume_Discount_Applied__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>PRODUCT2.NAME</field>
            <operation>contains</operation>
            <value>Hosting</value>
        </filters>
        <label>All Hosting Products</label>
    </listViews>
    <listViews>
        <fullName>All_Products</fullName>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>License_Type__c</columns>
        <columns>Partner_Margin_Applied__c</columns>
        <columns>Subscription_Duration__c</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Needs_VSOE_Approval__c</columns>
        <columns>No_VSOE_Approval__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>On_Premise_Active</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>One_Time_Discount_Applied__c</columns>
        <columns>License_Type__c</columns>
        <columns>Subscription_Duration__c</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Monthly__c</columns>
        <columns>Partner_Margin_Applied__c</columns>
        <columns>Perpetual_Support_Type__c</columns>
        <columns>Support_Pecent_per_Year__c</columns>
        <columns>Volume_Discount_Applied__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>On-Premise Subscription</value>
        </filters>
        <label>On Premise Active</label>
    </listViews>
    <listViews>
        <fullName>Perpetual_Product_Licenses</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>License_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Perpetual License</value>
        </filters>
        <label>Perpetual Product Licenses</label>
    </listViews>
    <listViews>
        <fullName>Training_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Training</value>
        </filters>
        <label>Education and Enablement Products</label>
    </listViews>
    <recordTypes>
        <fullName>License_Subscriptions</fullName>
        <active>true</active>
        <label>License Subscriptions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Perpetual_Licenses</fullName>
        <active>true</active>
        <label>Perpetual Licenses</label>
    </recordTypes>
    <recordTypes>
        <fullName>Services</fullName>
        <active>true</active>
        <label>Services</label>
    </recordTypes>
    <validationRules>
        <fullName>BMXB__Discount_Threshold_between_0_and_100</fullName>
        <active>true</active>
        <description>Product Specific Discount Thresholds must be between 0 and 100%</description>
        <errorConditionFormula>OR( BMXB__Product_Specific_Discount_Threshold__c &lt; 0, BMXB__Product_Specific_Discount_Threshold__c &gt; 1)</errorConditionFormula>
        <errorMessage>Product Specific Discount Thresholds must be between 0 and 100%</errorMessage>
    </validationRules>
</CustomObject>